# TouchController

./: .bazelrc  .editorconfig  MODULE.bazel  README.md  neoforge_pin.txt  repin_all.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: blazesdl.yml  touchcontroller.yml
.github/workflows/release/: touchcontroller-fabric.yml
blazesdl/: BUILD.bazel  SDLScreenManager.java  SDLUtil.java  SDLWindow.java  fabric.mod.json  properties.bzl
blazesdl/26.1/: BUILD.bazel  SDLGlBackend.java
blazesdl/26.2/: BUILD.bazel
blazesdl/api/: BlazeSDLAPI.java  BlazeSDLApiHolder.java  BlazeSDLEventHandler.java
blazesdl/mixin/: GLFWMixin.java  GlDeviceMixin.java  InputConstantsMixin.java  MinecraftMixin.java  RenderSystemMixin.java  WindowMixin.java
combine/backend/minecraft/versions/: BUILD.bazel
combine/core/input/text/: BUILD.bazel  InputHandler.kt
combine/core/widget/layout/: Column.kt  Row.kt
combine/example/hello_world/: BUILD.bazel
combine/example/hello_world/resources/: fabric.mod.json
combine/example/widget_factory/: BUILD.bazel
combine/example/widget_factory/resources/: fabric.mod.json
game/: game.bzl
game/1.12.2/: maven_install_fabric.json
game/1.14.4/: maven_install_fabric.json
game/1.15.2/: BUILD.bazel  maven_install_fabric.json
game/1.16.5/: maven_install_fabric.json
game/1.17.1/: maven_install_fabric.json
game/1.18.1/: maven_install_fabric.json
game/1.18.2/: maven_install_fabric.json
game/1.19.2/: maven_install_fabric.json
game/1.20.1/: maven_install_fabric.json
game/1.20.4/: maven_install_fabric.json
game/1.20.6/: maven_install_fabric.json
game/1.21/: maven_install_fabric.json
game/1.21.1/: maven_install_fabric.json
game/1.21.11/: maven_install_fabric.json
game/1.21.3/: maven_install_fabric.json
game/1.21.4/: maven_install_fabric.json
game/1.21.5/: maven_install_fabric.json
game/1.21.6/: maven_install_fabric.json
game/1.21.7/: maven_install_fabric.json
game/1.21.8/: maven_install_fabric.json
game/1.5.2/: maven_install_fabric.json
game/1.7.10/: maven_install_fabric.json
game/1.8.8/: maven_install_fabric.json
game/1.8.9/: maven_install_fabric.json
game/26.1/: BUILD.bazel  maven_install_fabric.json
game/26.1.2/: BUILD.bazel
game/26.2/: BUILD.bazel  maven_install_fabric.json
module/: fabric.MODULE.bazel  minecraft.MODULE.bazel  neoforge.MODULE.bazel
rule/: maven_publish.bzl  mod_info_jar.bzl
rule/modrinth_uploader/: BUILD.bazel  ModrinthUploader.java
rule/token_helper/: BUILD.bazel
rule/token_helper/wincred/: BUILD.bazel
touchcontroller/: NEWS-en.md  NEWS-zh.md  README.md  properties.bzl
touchcontroller/api/: BUILD.bazel  README.md
touchcontroller/api/example/: BUILD.bazel  TouchControllerApiExample.java
touchcontroller/api/resources/: fabric.mod.json
touchcontroller/api/v1/: TouchControllerApi.java  TouchControllerApiHolder.java  package-info.java
touchcontroller/api/v1/action/: GameAction.java  GameActionInstance.java  PlayerAction.java  PlayerActionInstance.java  package-info.java
touchcontroller/api/v1/draw/: Drawable.java  package-info.java
touchcontroller/api/v1/text/: Text.java  TextFactory.java  package-info.java
touchcontroller/api/v1/widget/: BuiltInWidget.java  BuiltInWidgetBuilder.java  BuiltInWidgetTextureProvider.java  TopBarWidgetBuilder.java  WidgetTexture.java  WidgetTextureBuilder.java  WidgetTriggerAction.java  WidgetTriggerActionProvider.java  package-info.java
touchcontroller/common/about/: AboutInfo.kt  AboutInfoProvider.kt  Libs.kt
touchcontroller/common/about/resources/: ResourcesAboutInfoProvider.kt
touchcontroller/common/annoations/: DontTranslate.kt
touchcontroller/common/api/: BUILD.bazel  TouchControllerApiImpl.kt
touchcontroller/common/api/trigger/: ApiWidgetTriggerAction.kt  ApiWidgetTriggerActionProvider.kt  BUILD.bazel
touchcontroller/common/api/widget/: ApiBuiltInWidgetBuilder.kt
touchcontroller/common/assets/: TextureItem.kt  TextureSet.kt
touchcontroller/common/config/: GlobalConfig.kt  ItemConfig.kt  PresetConfig.kt
touchcontroller/common/config/condition/: BuiltinLayerConditionKey.kt  CustomLayerConditionKey.kt  HoldingItemLayerConditionKey.kt  LayerConditions.kt  RidingEntityLayerConditionKey.kt  SelectEntityLayerConditionKey.kt
touchcontroller/common/config/data/: ChatConfig.kt  ControlConfig.kt  DebugConfig.kt  RegularConfig.kt  StatusConfig.kt  TouchRingConfig.kt
touchcontroller/common/config/holder/: GlobalConfigHolder.kt
touchcontroller/common/config/item/: ItemList.kt
touchcontroller/common/config/layout/: ControllerLayout.kt  LayoutLayer.kt
touchcontroller/common/config/preset/builtin/key/: BUILD.bazel  BuiltinPresetKey.kt  BuiltinPresetsProvider.kt
touchcontroller/common/config/preset/topbar/: BUILD.bazel  TopBarWidgets.kt
touchcontroller/common/control/: ConfigProperties.kt  ControllerWidget.kt  ControllerWidgetSerializer.kt  ControllerWidgetSerializerProvider.kt
touchcontroller/common/input/: InputManager.kt
touchcontroller/common/layout/: Context.kt  ContextConfig.kt
touchcontroller/common/model/: ControllerHudModel.kt  TouchControllerLoadStatus.kt  TouchStateModel.kt
touchcontroller/common/platform/: LargeMessageWrappedPlatform.kt  Platform.kt
touchcontroller/common/serialization/: Serializer.kt
touchcontroller/common/serializer/: ItemSerializer.kt
touchcontroller/common/state/: TouchState.kt
touchcontroller/common/ui/preset/: BUILD.bazel  BuiltInPresetKeySelector.kt  TopBarConfigureScreen.kt
touchcontroller/fabric/: BUILD.bazel
touchcontroller/fabric/resources/: fabric.mod.json
touchcontroller/proxy/message/: AddPointerMessage.kt  CapabilityMessage.kt  ClearPointerMessage.kt  FloatRect.kt  InitializeMessage.kt  InputAreaMessage.kt  InputCursorMessage.kt  InputStatusMessage.kt  KeyboardShowMessage.kt  LargeMessage.kt  MoveViewMessage.kt  ProxyMessage.kt  RemovePointerMessage.kt  VibrateMessage.kt
touchcontroller/resources/lang/: en_us.json  ru_ru.json  uk_ua.json  zh_cn.json  zh_tw.json
touchcontroller/wiki/src/: index.md
(+319 files in other folders)
