load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//1.15.2:client",
    client_assets = "@minecraft_assets//:assets_1.15.2",
    client_assets_version = "@minecraft_assets//:version_1.15.2",
    client_libraries = "@minecraft//1.15.2:client_libraries",
    client_mappings = "@minecraft//1.15.2:client_mappings",
    intermediary = "@maven_fabric_1_15_2//:net_fabricmc_intermediary_v2",
    neoforge = "@forge_1_15_2//:compiled_with_neoforge",
    server = "@minecraft//1.15.2:server",
    server_legacy = True,
    version = "1.15.2",
    visibility = ["//visibility:public"],
)
