load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//26.1.2:client",
    client_assets = "@minecraft_assets//:assets_26.1.2",
    client_assets_version = "@minecraft_assets//:version_26.1.2",
    client_libraries = "@minecraft//26.1.2:client_libraries",
    server = "@minecraft//26.1.2:server",
    version = "26.1.2",
    visibility = ["//visibility:public"],
)
