load("@rules_java//java:defs.bzl", "java_binary", "java_library")

alias(
    name = "modrinth_uploader_wrapper",
    actual = "modrinth_uploader_wrapper.bash",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "modrinth_uploader",
    srcs = [
        "ModrinthUploadData.java",
        "ModrinthUploader.java",
    ],
    main_class = "top.fifthlight.fabazel.modrinthuploader.ModrinthUploader",
    visibility = ["//visibility:public"],
    deps = [
        "//rule/token_helper",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_github_mizosoft_methanol_methanol",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
