load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "api",
    srcs = glob(["*.kt"]),
    merge_deps = [
        "//touchcontroller/common/api/text",
        "//touchcontroller/common/api/texture",
        "//touchcontroller/common/api/trigger",
        "//touchcontroller/common/api/widget",
        "//touchcontroller/common/config/preset/topbar",
        "//touchcontroller/common/control/action",
        "//touchcontroller/common/control/builtin",
        "//touchcontroller/common/gal/player",
    ],
    resource_strip_prefix = "touchcontroller/common/api/resources",
    resources = glob(["resources/**"]),
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//combine/core/data",
        "//touchcontroller/api",
    ],
)
