load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "trigger",
    srcs = glob(["*.kt"]),
    merge_deps = [
        "//touchcontroller/common/control/action",
    ],
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//touchcontroller/api",
    ],
)
