load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "preset",
    srcs = glob(["*.kt"]),
    merge_deps = [
        "//touchcontroller/common/assets",
        "//touchcontroller/common/config/condition",
        "//touchcontroller/common/config/layout",
        "//touchcontroller/common/config/preset",
        "//touchcontroller/common/config/preset/builtin/key",
        "//touchcontroller/common/config/preset/topbar",
        "//touchcontroller/common/control",
        "//touchcontroller/common/control/builtin",
        "//touchcontroller/common/layout/align",
        "//touchcontroller/common/layout/data",
        "//touchcontroller/common/ui/control",
        "//touchcontroller/common/ui/theme",
        "//touchcontroller/common/ui/widget",
        "//touchcontroller/common/ui/widget/navigation",
        "//touchcontroller/resources/lang:text_binding",
    ],
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//:compose",
        "//combine/core/data",
        "//combine/core/layout",
        "//combine/core/layout/constraints",
        "//combine/core/layout/measure",
        "//combine/core/modifier",
        "//combine/core/modifier/drawing",
        "//combine/core/modifier/placement",
        "//combine/core/modifier/scroll",
        "//combine/core/node",
        "//combine/core/paint",
        "//combine/core/widget/layout",
        "//combine/data",
        "//combine/style",
        "//combine/widget",
        "//touchcontroller/resources/texture:texture_lib",
        "@maven//:cafe_adriel_voyager_voyager_core_desktop",
        "@maven//:cafe_adriel_voyager_voyager_navigator_desktop",
        "@maven//:org_jetbrains_kotlinx_kotlinx_collections_immutable_jvm",
    ],
)
