load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "topbar",
    srcs = glob(["*.kt"]),
    merge_deps = [
        "//touchcontroller/common/control/builtin",
        "//touchcontroller/common/util/registry",
    ],
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//touchcontroller/api",
    ],
)
