load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "key",
    srcs = glob(["**/*.kt"]),
    expect = True,
    merge_deps = [
        "//touchcontroller/common/assets",
        "//touchcontroller/common/config/preset",
        "//touchcontroller/common/control/builtin",
        "//touchcontroller/resources/lang:text_binding",
        "//touchcontroller/resources/texture:texture_set_lib",
    ],
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//:kotlin_serialization",
        "//combine/core/data",
        "@maven//:org_jetbrains_kotlinx_kotlinx_collections_immutable_jvm",
    ],
)
